testsuite/bsc.evaluator/errors/LogNegative.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling LogNegative.bsv
code generation for sysLogNegative starts
Error: "LogNegative.bsv", line 5, column 16: (G0085)
  A logarithm operator was applied to a non-positive number during
  elaboration.
  During elaboration of the body of rule `test' at "LogNegative.bsv", line 3,
  column 9.
  During elaboration of `sysLogNegative' at "LogNegative.bsv", line 2, column
  8.
